# simple-urls-checker

./: Dockerfile  README.md  main.py  pyproject.toml  urls-checker.py  urls_checker.py
k8s/: README.md  configmap.yaml  job.yaml
tests/: test_all.py
