[project]
name = "simple-urls-checker"
version = "0.1.0"
description = "A simple URL health checker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]


[project.scripts]
test = "pytest"
urls-checker = "urls_checker:main"
